wellBeingCheck-63 Secured WebAPI Added openapi-generator client using fetch mechanism Started the back-end service to handle communication with webapi Updated the openapi spec to add operationId and rely less on inlined type References #63
