# wellBeingCheck/src/api/openapi/models/BilingualLink.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pilot Mobile App API
+ * API to support retreiving config data, submit app paradata and obtain graphs to be used by the WellBeringCheck mobile app.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface BilingualLink
+ */
+export interface BilingualLink {
+    /**
+     * English link
+     * @type {string}
+     * @memberof BilingualLink
+     */
+    enUrl?: string;
+    /**
+     * French link
+     * @type {string}
+     * @memberof BilingualLink
+     */
+    frUrl?: string;
+}
+
+export function BilingualLinkFromJSON(json: any): BilingualLink {
+    return BilingualLinkFromJSONTyped(json, false);
+}
+
+export function BilingualLinkFromJSONTyped(json: any, ignoreDiscriminator: boolean): BilingualLink {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'enUrl': !exists(json, 'enUrl') ? undefined : json['enUrl'],
+        'frUrl': !exists(json, 'frUrl') ? undefined : json['frUrl'],
+    };
+}
+
+export function BilingualLinkToJSON(value?: BilingualLink | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'enUrl': value.enUrl,
+        'frUrl': value.frUrl,
+    };
+}
+
+
